--- a/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
+++ b/arkki_homepage/src/components/AboutUs/AboutUs.style.scss
@@ -7,9 +7,9 @@
 }
 
 /**** IMAGE GALLERY ****/
-*,
-*::before,
-*::after {
+.about__container,
+.about__container::before,
+.about__container::after {
   box-sizing: border-box;
 }
 
