--- a/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
@@ -1,8 +1,9 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
+    border: 2px salmon solid;
     margin: 0;
 }
 
@@ -20,7 +21,7 @@
     width: 100%;
     height: 100%;
     grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1.5fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
     overflow-x: hidden;
     margin: 0;
 
@@ -33,9 +34,8 @@
 .subs {
     grid-area: 1 / 1 / 5 / 2;
     order: 1;
-    display: flex;
-    position: relative;
-    flex-direction: row;
+    display: grid;
+    grid-template: repeat(1fr, 2);
     width: 100%;
     height: 100%;
     margin: 0;
@@ -43,8 +43,6 @@
 
     @media screen and (orientation: landscape) {
         grid-area: 1 / 1 / 2 / 2;
-        display: flex;
-        flex-wrap: nowrap;
     }
 }
 
@@ -78,35 +76,17 @@
 
     @media screen and (orientation: landscape) {
         grid-area: 1 / 5 / 2 / 6;
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
+        display: grid;
+        grid-template: repeat(1fr, 2);
         width: 100%;
         height: 100%;
         margin: 0;
+        padding: 0;
         border-left: 1px solid #676767;
     }
 }
 
 // *** OLD *** //
-
-.SBContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: 80vh;
-    position: relative;
-}
-
-.SBContainer__formation {
-    position: relative;
-    margin-bottom: 4em;
-    text-align: center;
-    flex-direction: column;
-    margin-top: 2em;
-}
 
 .SBContainer__dropdown {
     position: relative;
