--- a/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
+++ b/arkki_homepage/src/components/SquadBuilder/SquadBuilder.style.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     max-width: 100vw;
     max-height: 100vh;
-    border: 2px salmon solid;
     margin: 0;
 }
 
@@ -40,6 +39,7 @@
     height: 100%;
     margin: 0;
     border-right: 1px solid #676767;
+    border-bottom: 1px solid #676767;
 
     @media screen and (orientation: landscape) {
         grid-area: 1 / 1 / 2 / 2;
@@ -57,6 +57,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    border-bottom: 1px solid #676767;
     @media screen and (orientation: landscape) {
         grid-area: 1 / 2 / 2 / 5;
     }
@@ -73,6 +74,7 @@
     height: 100%;
     border-top: 1px solid #676767;
     margin: 0;
+    border-bottom: 1px solid #676767;
 
     @media screen and (orientation: landscape) {
         grid-area: 1 / 5 / 2 / 6;
