--- a/arkki_homepage/styles/SquadBuilder.styles.scss
+++ b/arkki_homepage/styles/SquadBuilder.styles.scss
@@ -180,7 +180,7 @@
     align-items: center;
     justify-items: center;
     position: relative;
-    background-image: url(../../../assets/card.png);
+    background-image: url(../assets/card.png);
     background-size: contain;
     background-repeat: no-repeat;
     padding: 0px;
